<resources>
    <string name="app_name">contact definitive</string>
    <string name="null_fields_toast">Os campos não podem estar vazios</string>
    <string name="full_fields_toast">A lista de contato está cheia</string>
    <string name="save_fields_toast">Contato salvo com sucesso</string>
    <string name="null_list_toast">A lista de contato está vazia</string>
    <string name="null_saving_toast">A lista de contato foi apagada com sucesso!</string>
    <string name="hint_name">Nome</string>
    <string name="hint_phone">Telefone</string>
    <string name="save_field_button">Salvar contato</string>
    <string name="list_field_button">Lista de contatos</string>
    <string name="list_clear_field_button">Limpar lista</string>
    <string name="return_field_button">Retornar</string>
    <string name="contact_list">Contact List</string>
    <string name="toast_shirt_name">Coloque um nome menor!</string>
</resources>