<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainContactList">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_list"
        android:textSize="29sp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingHorizontal="10dp"
        android:layout_marginBottom="375dp"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/hint_name"
        android:maxLength="35"
        android:inputType="text"
        android:backgroundTint="@color/green_intelbras"
        android:backgroundTintMode="add"
        app:layout_constraintBottom_toTopOf="@+id/buttonSaveContact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/editPhone"/>

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/hint_phone"
        android:maxLength="12"
        android:inputType="number"
        android:backgroundTint="@color/green_intelbras"
        android:backgroundTintMode="add"
        app:layout_constraintBottom_toTopOf="@+id/buttonSaveContact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_name" />

    <Button
        android:id="@+id/buttonSaveContact"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/save_field_button"
        android:background="@drawable/rounded_corners"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/buttonContactList"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/list_field_button"
        app:layout_constraintTop_toBottomOf="@id/buttonSaveContact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rounded_corners"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/buttonClearContacts"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/list_clear_field_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonContactList"
        android:background="@drawable/rounded_corners"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

